# bad_idea

./: .gitignore  Cargo.toml  Gemfile  Makefile  README.md  bad_idea.gemspec
ext/bad_idea/: Makefile  bad_idea.c  extconf.rb
lib/: bad_idea.rb
lib/bad_idea/: version.rb
src/: lib.rs
