[package]
name = "bad_idea"
version = "0.1.0"
authors = ["Steve Klabnik <steve@steveklabnik.com>"]
description = "This is a bad idea."
license = "AGPL-3.0"
homepage = "https://github.com/steveklabnik/bad_idea/"
repository = "https://github.com/steveklabnik/bad_idea/"

[lib]
name = "bad_idea"
crate-type = ["staticlib"]
